implemented delta debugger

--- a/DeltaDebugger/DeltaDebugger.csproj
+++ b/DeltaDebugger/DeltaDebugger.csproj
@@ -7,4 +7,18 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <None Remove="TestInput.txt" />
+    <None Remove="WCNFParser.exe" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Resource Include="TestInput.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="WCNFParser.exe">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Resource>
+  </ItemGroup>
+
 </Project>
